<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Student Reside</string>
    <string name="hostel_icon" translatable="false">Hostel icon</string>
    <string name="hostels" translatable="false">Hostels</string>
    <string name="add" translatable="false">Add</string>
    <string name="hostel_name" translatable="false">Hostel Name</string>
    <string name="boys_girls" translatable="false">Boys/Girls</string>
    <string name="fee_per_month">Fee Per Month</string>
    <string name="rating">Rating</string>
    <string name="safety_service">Easy Study</string>
    <string name="studentReside_zone">You and Us</string>
    <string name="copyright_StudentReside">StudentReside | 2023</string>
    <string name="help">help</string>
    <string name="hosteltype">HostelType</string>
    <string name="hostel_type">Hostel Type :</string>
    <string name="girls_boys">Girls/Boys</string>
    <string name="contact_no">Contact No. :</string>
    <string name="_0123456789">9988776655</string>
    <string name="address">Address :</string>
    <string name="address_3">Delhi</string>
    <string name="fee_per_month_">Fee per month :</string>
    <string name="rs_2500">Rs. 2500/-</string>
    <string name="hostel_time">Hostel Time</string>
    <string name="hostel_in_time">Hostel In-Time :</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="hostel_rating">Hostel Rating</string>
    <string name="rating_">Rating :</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="tiffin_centers">Tiffin Centers</string>
    <string name="tiffin_center_name">Tiffin Center Name</string>
    <string name="add_hostel">Add Hostel</string>
    <string name="tiffin_icon">Tiffin icon</string>
    <string name="add_tiffin">Add Tiffin Center</string>
    <string name="sort">Sort By?</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="search_hostels">Search Hostels</string>
    <string name="not_found">Not found</string>
    <string name="boyshostel">Boys Hostel</string>
    <string name="girlshostel">Girls Hostel</string>
    <string name="login_text">LOGIN WITH GMAIL ACCOUNT</string>
    <string name="search_tiffin_centers">Search Tiffin Centers</string>
    <string name="emergency_mobile_number1">"Emergency Mobile Number "</string>
    <string name="emergency_mobile_number2">Emergency Mobile Number 2</string>
    <string name="emergency_mobile_number3">Emergency Mobile Number 3</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="HostelsAddress">hostelAddress</string>
    <string name="mishra_girl_s_hostel">Mishra Girl\'s Hostel</string>
    <string name="_9_00pm">9:00PM</string>
    <string name="address_2">Muradnagar,Ghaziabad (201206)</string>
    <string name="fee">Fee</string>
    <string name="_8377_4000_month">₹ 4000/Month</string>
    <string name="x23f0_9_00pm">⏰ 9:00pm</string>
    <string name="contact">Contact</string>
    <string name="todo">TODO</string>
    <string name="location">Location</string>
    <string name="alert">Alert</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="faqs">FAQs</string>
    <string name="_1_can_students_talk_to_others_who_are_already_living_in_hostel_to_get_honest_review">1. Can students talk to others who are already living in hostel to get honest review?</string>
    <string name="ans_1">Ans- Yes,While exploring the hostels, list of students available who are already living there.</string>
    <string name="_2_can_we_order_lunch_dinner_through_this_app">2. Can we order lunch/dinner through this app?</string>
    <string name="ans_no_you_cannot_order_directly_through_this_app_the_app_only_provides_the_contact_number_and_the_location_of_the_service_incharge">Ans-No, you cannot order Directly through this app . The app only provides the contact number and the location of the service incharge.</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_your_feedback" tools:ignore="TypographyEllipsis">Enter your Feedback or Query...</string>
    <string name="enter_your_email">Enter your Email...</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="lbl_verify_phone">Verify Phone</string>
    <string name="msg_code_is_sent_to">OTP is sent to</string>
    <string name="msg_verify_and_cont">Verify and Continue</string>
    <string name="msg_didn_t_receive">Didn\'t Receive OTP? Sent again.</string>
    <string name="txt_get_otp">Get OTP</string>
    <string name="txt_get_started">Get Started</string>
    <string name="easy_study">Easy Study</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="engg">Engineering</string>
    <string name="medical">Medical</string>
    <string name="ssc">SSC</string>
    <string name="enter_topic_name">Enter Topic Name:</string>
    <string name="topic_name">Topic Name</string>
    <string name="add_pg_hostels">Add PG/Hostel</string>
    <string name="add_tiffin_centers">Add Tiffin Centers</string>
    <string name="hostel_pg_name">Hostel/PG name</string>
    <string name="hostel_address">Hostel address</string>
    <string name="hostel_contact_no">Hostel Contact No.</string>
    <string name="hostel_timing_in_time">Hostel Timing (In-time) \n Please fill the night In-Time of your Hostel (PG) in PM</string>
    <string name="hostel_details">Hostel Details</string>
    <string name="additional_charges_like_electricity_bill_etc">Additional Charges like Electricity Bill etc.</string>
    <string name="medical_store_under_1km">Medical Store (under 1KM)</string>
    <string name="restaurant_cafe_foodzone_under_1km">Restaurant / Cafe / FoodZone (under 1KM)</string>
    <string name="bathroom_attached">Bathroom Attached</string>
    <string name="common_bathroom">Common Bathroom</string>
    <string name="individual_room">Individual Room</string>
    <string name="shared_room">Shared Room</string>
    <string name="tiffin_center_address">Tiffin center address</string>
    <string name="tiffin_contact_no">Tiffin center contact no</string>
    <string name="add_tiffin_center">Add Tiffin Center</string>
    <string name="manage_pg_hostels">Manage PG/hostels</string>
    <string name="manage_tiffin_center">Manage tiffin centers</string>
    <string name="add_logo_image">Logo Image</string>
    <string name="video">Video</string>
    <string name="opt_hostel">Opt Hostel</string>
    <string name="add_a_new_person_in_your_hostel_pg_manually">Add a new person in your hostel/pg manually</string>
    <string name="you_accepted_that_you_live_here">You accepted that you live here</string>
    <string name="student_name">Student name</string>
    <string name="his_phone">his Phone</string>
    <string name="peoples_in_this_hostel_pg">Peoples in this hostel/Pg:</string>
    <string name="lorem_ipsum">Lorem ipsum amet</string>
    <string name="search_peoples_here">search peoples here....</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="you_must_have_checked_images_and_videos_of_desired_pg_hostel_and_liked_them_it_is_recommended_to_talk_once_to_the_owner_on_mobile_number_provide_at_contact_section_there_are_two_ways_to_proceed_payment_n_1_offline_mode_you_can_visit_at_location_and_pay_offline_after_payment_owner_will_notify_you_it_can_be_checked_at_notification_section_once_you_click_accept_in_notified_message_you_will_be_get_listed_in_opted_pg_hostel_n_2_online_mode_you_can_pay_online_once_the_payment_is_successful_student_reside_will_send_you_notification_and_you_will_be_get_listed">You must have checked images and videos of desired PG/hostel and Liked them. It is recommended to talk once to the owner on mobile number provide at contact section. There are two ways to proceed payment. \n 1. Offline mode: You can visit at location and pay offline. After payment owner will notify you, it can be checked at notification section. Once you click \'accept\' in notified message, you will be get listed in opted PG/hostel. \n 2. Online Mode: You can pay online, once the payment is successful \'Student Reside\' will send you notification and you will be get listed.</string>
    <string name="proceed_online">Proceed Online</string>
</resources>