<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/hostel_icon"
        android:src="@drawable/hostelmateicon" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appIcon">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_pg_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/hostelName"
                    style="@style/LWView"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/hostelType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_type"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="25dp">

                    <RadioButton
                        android:id="@+id/b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Boys" />
                    <RadioButton
                        android:id="@+id/g"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Girls" />
                </RadioGroup>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_address"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/hostelAddress"
                    style="@style/LWView"
                    android:textColor="@color/black"
                    android:inputType="textPostalAddress"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/tvContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_contact_no"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/hostelContactNo"
                    style="@style/LWView"
                    android:textColor="@color/black"
                    android:inputType="phone"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/tvFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fee_per_month"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/hostelFee"
                    style="@style/LWView"
                    android:textColor="@color/black"
                    android:inputType="number"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_details"
                    android:textStyle="bold" />
                <CheckBox
                    android:id="@+id/c1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/additional_charges_like_electricity_bill_etc"/>
                <CheckBox
                    android:id="@+id/c2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/medical_store_under_1km"/>
                <CheckBox
                    android:id="@+id/c3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/restaurant_cafe_foodzone_under_1km"/>
                <CheckBox
                    android:id="@+id/c4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/bathroom_attached"/>
                <CheckBox
                    android:id="@+id/c5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/common_bathroom"/>
                <CheckBox
                    android:id="@+id/c6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/individual_room"/>
                <CheckBox
                    android:id="@+id/c7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/shared_room"/>

                <EditText
                    android:id="@+id/otherDetail"
                    style="@style/LWView"
                    android:hint="other"
                    android:textColor="@color/black"
                    android:inputType="text"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">


                <TextView
                    android:id="@+id/inTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_timing_in_time"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/hostelTiming"
                    style="@style/LWView"
                    android:textColor="@color/black"
                    android:inputType="time"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            style="@style/btnSolid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/add_pg_hostels"
            />

    </LinearLayout>
    </ScrollView>

</RelativeLayout>